[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI_scenes/pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/Some Time Later.otf" type="DynamicFontData" id=2]
[ext_resource path="res://audio/used_audio/button.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/used_audio/game_enter_sound.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
size = 125
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="pause" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.192157, 0.317647, 0.533333 )

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer2"]
margin_left = 200.0
margin_top = 50.0
margin_right = 824.0
margin_bottom = 529.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer"]
margin_right = 624.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Godot Advanture"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
margin_top = 259.0
margin_right = 624.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Resume" type="Button" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer"]
pause_mode = 2
margin_left = 50.0
margin_right = 574.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 624.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Restart" type="Button" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2"]
pause_mode = 2
margin_left = 50.0
margin_right = 574.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Restart"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 624.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ExitGame" type="Button" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3"]
pause_mode = 2
margin_left = 50.0
margin_right = 574.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Exit Game"

[node name="ExitTimer" type="Timer" parent="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/ExitGame"]
wait_time = 1.5

[node name="audio" type="Node" parent="ColorRect"]

[node name="btnHoverAudio" type="AudioStreamPlayer" parent="ColorRect/audio"]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -10.0

[node name="btnEnterAudio" type="AudioStreamPlayer" parent="ColorRect/audio"]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="mouse_entered" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer/Resume" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2/Restart" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/ExitGame" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/ExitGame" to="." method="_on_ExitGame_pressed"]
[connection signal="timeout" from="ColorRect/MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/ExitGame/ExitTimer" to="." method="_on_ExitTimer_timeout"]
